tests/c_programs/conditional/valid/complex.c
int main(void) {
    // Complex conditional with arithmetic
    return (5 > 3) ? (2 + 3) * 4 : 10 - 5;
}