tests/c_programs/conditional/invalid_parse/missing_then.c
int main(void) {
    // Missing then expression - should fail
    return 1 ? : 0;
}